<resources>
    <string name="app_name">BeCare</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="login">Login</string>

    <string name="exercise_ring_rect"><b>Snooker</b></string>
    <string name="exercise_transcription"><b>Transcription Test</b></string>
    <string name="exercise_contrast"><b>Contrast Sensitivity</b></string>
    <string name="exercise_arm_elevation"><b>Arm Elevation</b></string>
    <string name="exercise_timed_walk"><b>Timed Walk</b></string>
    <string name="exercise_tap_task"><b>Tap Task</b></string>

    <string name="description_ring_rect"><b>Move the soccer ball along the path to score a goal!</b></string>
    <string name="description_transcription"><b>Test your hearing ability by typing the friendly audio message</b></string>
    <string name="description_contrast"><b>Exercise your working memory by matching the images</b></string>
    <string name="description_arm_elevation"><b>Challenge how many times you can elevate your arm in a timed period.</b></string>
    <string name="description_timed_walk"><b>Move your body in the timed distance workout</b></string>
    <string name="description_up_and_go"><b>Measure your motion from sitting to standing, in a timed period.</b></string>
    <string name="description_stroop_test"><b>Finding the naming the colors of color words.</b></string>
    <string name="description_tap_test"><b>Fill your treasure by collecting coins.</b></string>
    <string name="twenty_five_steps">Twenty five steps</string>
    <string name="six_minutes_walk">Six minutes walk</string>
    <string name="up_and_go">Tug</string>
    <string name="stroop">Stroop Test</string>
    <string name="sensors_list">List of Sensors</string>
    <string name="menu_tools">Tools</string>

    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>


    <string name="login_register"> <u>Register Here</u></string>
    <string name="login_forget"> <u>Forgot Password?</u></string>
    <string name="login_skip"> <u>Skip to Becare App</u></string>
    <string name="login_already_registered"> <u>Already a registered user? Sign In</u></string>

    <string name="contrast_match">Match</string>
    <string name="contrast_test_color">Color Test</string>
    <string name="contrast_test_contrast">Contrast Test</string>
    <string name="contrast_mismatch">Mismatch</string>
    <string name="contrast_skip"><u>Skip</u></string>
    <string name="contrast_done">Done</string>
    <string name="contrast_performance">Performance: %1$d correct out of %2$d</string>


    <string name="contrast_instruction">Mark your response with\nMatch if you find both pallet similar\nMismatch otherwise </string>
    <string name="transcript_instruction">Type the phrase using the quadrant keyboard as quickly as possible.\nContinue past wrong key</string>
    <string name="taptask_instruction">Tap on any of gold silver or bronze to collect coins as fast as possible</string>

    <string name="another_day">Another day</string>
    <string name="frankly_speaking">Frankly speaking</string>
    <string name="keep_in_touch">Keep in touch</string>
    <string name="transcript_greet">Nice to meet you</string>
    <string name="no_problem">No Problem</string>
    <string name="take_a_message">Take a message</string>
    <string name="take_me_away">Take me away</string>
    <string name="see_you_later">See you later</string>

    <string name="transcript_performance">✔ %1$d \t\t  ✖ %2$d </string>
    <string name="transcript_performance_time">✔ %1$d \t\t  ✖ %2$d\t\t in %3$s</string>

    <string name="tap_performance">Bronze: %1$d \t\t  Silver: %2$d\t\t  Gold: %3$d</string>


    <string name="next">Next</string>
    <string name="previous">Previous</string>



    <string-array name="height_arrays" style="@style/spinnerStyle">
        <item style="@style/spinnerStyle">5.0</item>
        <item style="@style/spinnerStyle">5.1</item>
        <item>5.2</item>
        <item>5.3</item>
        <item>5.4</item>
        <item>5.5</item>
        <item>5.6</item>
        <item>5.7</item>
        <item>5.8</item>
        <item>5.9</item>
        <item>5.10</item>
        <item>5.11</item>
        <item>6.0</item>
        <item>6.1</item>
        <item>6.2</item>
        <item>6.3</item>
        <item>6.4</item>
    </string-array>
    <string name="compass_dial">Compass Dial</string>
    <string name="compass_hands">Compass Hands</string>
</resources>
