<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_arm_elavation"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/exercise_arm_elevation" />
        <item
            android:id="@+id/nav_snooker"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/exercise_ring_rect" />
        <item
            android:id="@+id/nav_transcription"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/exercise_transcription" />
        <item
            android:id="@+id/nav_contranst"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/exercise_contrast" />
        <item
            android:id="@+id/nav_timed_walk"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Timed Walk" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_tools" />
        </menu>
    </item>

</menu>
