<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <com.github.pocmo.sensordashboard.ui.InstructionView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/rounded_green_rectangle"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:minHeight="120dp"
        android:text="@string/contrast_instruction"/>

    <TextView
        android:id="@+id/tv_performance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Performance: 0 correct out of 0"
        android:textSize="18sp"
        android:gravity="center"
        android:visibility="invisible"/>

    <FrameLayout
        android:id="@+id/pager_containter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:visibility="gone">

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/response_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_similar"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/contrast_match"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:gravity="center"
            android:background="@color/green"/>

        <TextView
            android:id="@+id/tv_different"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/contrast_mismatch"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@color/red"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:text="START"
        android:padding="5dp"
        android:layout_gravity="center"
        android:minWidth="100dp"
        android:visibility="visible"/>

</LinearLayout>